# Tukuba_Challenge

./: .gitignore  README.md
gps_py/: gps_aid.py  gps_test.py
gps_py/test/: GPS.py  main.py  requirements.txt  run.py  tmp.py
main_program/document/: crates.js  settings.html  source-files.js
main_program/document/gpioRobot/: all.html  fn.Motor.html  fn.analysis.html  fn.main.html  fn.py_test.html  fn.s3.html  fn.s4.html  index.html  macro.thread_generate!.html  macro.thread_generate.html  sidebar-items.js
main_program/document/gpioRobot/robot/: index.html  sidebar-items.js
main_program/document/gpioRobot/rthred/: index.html  sidebar-items.js  struct.Rthd.html
main_program/document/gpioRobot/sensor/: index.html  sidebar-items.js
main_program/document/gpioRobot/xtools/: fn.ms_sleep.html  fn.time_sleep.html  index.html  sidebar-items.js  struct.Benchmark.html
main_program/python/test/: controller.py  keytest.py  main.py
main_program/python/test_motor/: run.py
main_program/rust/Robot/: Cargo.toml  lat_lon_history.txt  main.py  order.csv  settings.yaml  sw.py  waypoint.csv
main_program/rust/Robot/.cargo/: config.toml
main_program/rust/Robot/core/: Cargo.toml  order.csv  settings.yaml  waypoint.csv
main_program/rust/Robot/core/src/: main.rs  mode.rs  xtools.rs
main_program/rust/Robot/core/src/robot/: config.rs  fspr.rs  future_mode.rs  gpio.rs  mod.rs  mode.rs  rthred.rs  serial.rs  setting.rs  tui.rs
main_program/rust/Robot/core/src/robot/mode/: auto.rs  key.rs  mod.rs  nauto.rs  shitunai.rs  srpauto.rs  test.rs  test2.rs
main_program/rust/Robot/flacon/: Cargo.toml
main_program/rust/Robot/flacon/src/: lib.rs
main_program/rust/callPython/: Cargo.toml
main_program/rust/gpioRobot/: Cargo.toml  README.md  operation.csv  order.csv  order.md  settings.yaml  waypoint.csv
main_program/rust/gpioRobot/.cargo/: config
main_program/rust/gpioRobot/py_scripts/: run.py  test.py
main_program/rust/gpioRobot/scripts/: test.py
main_program/rust/gpioRobot/src/: boneyard.rs  main.rs  rthred.rs  xtools.rs
main_program/rust/gpioRobot/src/mode/: display.rs
main_program/rust/gpioRobot/src/robot/: mod.rs  moter.rs  motor.rs  qsys.rs  settings.rs  tflite.rs
main_program/rust/gpioRobot/src/senser/: lidar.rs  lidar_list.txt  lider.rs  mod.rs  tflite.rs
main_program/rust/gpioRobot/src/sensor/: gps.rs  lidar.rs  lidar_list_len.txt  mod.rs  tflite.rs
main_program/rust/lidar_plot/: Cargo.toml  lidar_list.txt
main_program/rust/moter_rpm/: Cargo.toml
main_program/rust/obtflite/: Cargo.toml
main_program/test/: test.py
objectdetection/fifty/: convert.py  main.py
objectdetection/test/: main.py  object.py
objectdetection/train/: main.py  meta.py
objectdetection/train25/: info.json  main.py  salad-labels.txt
ydlidar_test/: LidarX2.py  main.py
(+51 files in other folders)
