[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
load-shdlib = { path = "../load-shdlib" }
slam = { path = "../slam" }
flacon = {path = "../flacon"}
robot-gpio = {path = "../robot-gpio"}


yaml-rust = "0.4"
tokio = { version = "1.21.2", features = ["full"] }
async-trait = "0.1.57"
getch = "0.3.1"
