[package]
name = "flacon"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robot-gpio = {path = "../robot-gpio"}
gps = {path = "../gps"}


tokio = { version = "1.21.2", features = ["full"] }
async-trait = "0.1.57"
